feat(feature/s-18): src/main/java/com/example/domain/tellersession/model/TellerSession.java